--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-----------------------UNICONS---------------->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     
-    <title>ibraheem</title>
+    <title>Quams Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
